--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
-  "name": "yaycryptostock-application",
+  "name": "yaycryptostock",
   "version": "1.3.0",
+  "repository": {
+    "url": "git+https://github.com/Emzzy241/Yay-Crypto-Stock"
+  },
   "description": "",
   "main": "main.js",
   "scripts": {
     "build": "webpack --mode development",
     "start": "npm run build & webpack-dev-server --open --mode development",
     "lint": "eslint src/*.js",
-    "test": "jest"
+    "test": "jest",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "keywords": [],
   "author": "Mojiboye Emmanuel Oluwole(Emzzy241)",
@@ -20,6 +25,7 @@
     "dotenv-webpack": "^8.0.1",
     "eslint": "^8.10.0",
     "eslint-webpack-plugin": "^3.1.1",
+    "gh-pages": "^5.0.0",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^27.5.0",
     "style-loader": "^3.3.1",
